# py-marathon-utils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: format-reference.md
examples/: extract_all.py  list_level_polygons.py
scripts/: fetch_sample_patches.py  generate_fonts.py
src/marathon_utils/: __init__.py  __main__.py  cli.py  images.py  macbinary.py  macrsrc.py  maps.py  patches.py  physics.py  samsara.py  shapes.py  sounds.py  strings.py  terminals.py  visualize.py  wad.py
src/marathon_utils/fonts/: Courier12.txt  CourierBold12.txt  CourierBoldItalic12.txt  CourierItalic12.txt  README.md
tests/: conftest.py  test_images.py  test_integration.py  test_m2_mi.py  test_macbinary.py  test_patches.py  test_perl_parity.py  test_physics.py  test_strings.py  test_terminal_helpers.py  test_terminals.py  test_wad.py  test_writers.py  test_writers_round_trip.py
