[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-marathon-utils"
dynamic = ["version"]
description = "Read Bungie Marathon / Aleph One data files (maps, shapes, sounds) in pure Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "dmang-dev" },
]
keywords = ["marathon", "bungie", "aleph-one", "wad", "macbinary", "retro-gaming", "modding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Typing :: Typed",
]

[project.optional-dependencies]
images = ["Pillow>=9.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "Pillow>=9.1",
    "ruff>=0.4",
    "mypy>=1.5",
]

[project.scripts]
marathon-utils = "marathon_utils.cli:main"

[project.urls]
Homepage = "https://github.com/dmang-dev/py-marathon-utils"
Repository = "https://github.com/dmang-dev/py-marathon-utils"
Issues = "https://github.com/dmang-dev/py-marathon-utils/issues"
Reference = "https://github.com/Aleph-One-Marathon/alephone"

[tool.setuptools.dynamic]
version = { attr = "marathon_utils.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marathon_utils = ["py.typed", "fonts/*.txt", "fonts/*.md", "fonts/OFL.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "needs_sample_data: tests that require a real Marathon data file on disk",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # long lines OK in byte-layout docstrings

# Runtime supports 3.8+, but mypy's own minimum analysis target is 3.10.
[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
